--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -1,5 +1,7 @@
-# homebridge-music/src/Makefile
+# homebridge-music/scripts/Makefile
 # Copyright © 2016-2018 Erik Baauw. All rights reserved.
+#
+# Homebridge plugin for iTunes with Airplay speakers.
 
 %.scpt: %.applescript
 	osacompile -o $@ $<
@@ -7,7 +9,6 @@
 SCRIPTS = iTunes.scpt Airfoil.scpt EyeTV.scpt
 
 all:	$(SCRIPTS)
-	mv ${SCRIPTS} ../lib
 
 clean:
 	rm -f $(SCRIPTS)
