--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "is-my-json-valid": "^2.17.2",
     "semver": "^5.5.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "*"
+  },
   "scripts": {
     "prepare": "(cd scripts; make)",
     "test": "echo \"Error: no test specified\" && exit 1"
