--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   ],
   "main": "index.js",
   "engines": {
-    "homebridge": "^0.4.49",
+    "homebridge": "^0.4.50",
     "node": "^10.16.0"
   },
+  "os": [
+    "darwin"
+  ],
   "dependencies": {
     "applescript": "~1.0.0",
     "is-my-json-valid": "~2.20.0",
