--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "main": "index.js",
   "engines": {
     "homebridge": "^0.4.50",
-    "node": "^12.14.1"
+    "node": "^12.16.1"
   },
   "os": [
     "darwin"
   ],
   "dependencies": {
     "applescript": "~1.0.0",
+    "homebridge-lib": "~4.5.2",
     "is-my-json-valid": "~2.20.0",
-    "semver": "~7.1.1"
+    "semver": "~7.1.3"
   },
   "scripts": {
     "prepare": "standard && (cd scripts; make catalina)",
