--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "main": "index.js",
   "engines": {
-    "homebridge": "^0.4.50",
+    "homebridge": "~0.4.50",
     "node": "^12.16.1"
   },
   "os": [
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "applescript": "~1.0.0",
-    "homebridge-lib": "~4.5.2",
+    "homebridge-lib": "~4.5.5",
     "is-my-json-valid": "~2.20.0",
     "semver": "~7.1.3"
   },
