--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   ],
   "main": "index.js",
   "engines": {
-    "homebridge": "~1.0.0||0.4.54-beta.54",
-    "node": "^12.16.2"
+    "homebridge": "~1.0.4",
+    "node": "^12.16.3"
   },
   "os": [
     "darwin"
   ],
   "dependencies": {
     "applescript": "~1.0.0",
-    "homebridge-lib": "~4.6.0",
+    "homebridge-lib": "~4.7.3",
     "is-my-json-valid": "~2.20.0",
     "semver": "~7.3.2"
   },
