--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "main": "index.js",
   "engines": {
-    "homebridge": "~1.0.4",
+    "homebridge": "^1.0.4",
     "node": "^12.16.3"
   },
   "os": [
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "applescript": "~1.0.0",
-    "homebridge-lib": "~4.7.3",
+    "homebridge-lib": "~4.7.5",
     "is-my-json-valid": "~2.20.0",
     "semver": "~7.3.2"
   },
