--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "main": "index.js",
   "engines": {
     "homebridge": "^1.1.0",
-    "node": "^14.15.1"
+    "node": "^14.15.2"
   },
   "os": [
     "darwin"
   ],
   "dependencies": {
     "applescript": "^1.0.0",
-    "homebridge-lib": "^4.8.3",
+    "homebridge-lib": "~4.8.4",
     "is-my-json-valid": "^2.20.5",
     "semver": "^7.3.4"
   },
