--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "homebridge-music",
   "description": "Homebridge plugin for iTunes with Airplay speakers",
+  "displayName": "Homebridge Music",
   "version": "0.4.15",
   "author": "Erik Baauw",
   "license": "Apache-2.0",
