--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   "main": "index.js",
   "engines": {
     "homebridge": "^1.5.0",
-    "node": "^16.17.0"
+    "node": "^16.17.1"
   },
   "os": [
     "darwin"
   ],
   "dependencies": {
     "applescript": "^1.0.0",
-    "homebridge-lib": "~5.6.5",
-    "is-my-json-valid": "^2.20.6",
-    "semver": "^7.3.7"
+    "homebridge-lib": "~5.6.8",
+    "is-my-json-valid": "^2.20.6"
   },
   "scripts": {
     "prepare": "standard && (cd scripts; make catalina)",
@@ -34,8 +33,13 @@
     "url": "https://github.com/ebaauw/homebridge-music/issues"
   },
   "homepage": "https://github.com/ebaauw/homebridge-music#readme",
-  "funding": {
-    "type": "paypal",
-    "url": "https://www.paypal.me/ebaauw/EUR"
-  }
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/ebaauw"
+    }, {
+      "type": "paypal",
+      "url": "https://www.paypal.me/ebaauw/EUR"
+    }
+  ]
 }
