--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "main": "index.js",
   "engines": {
     "homebridge": "^1.6.1",
-    "node": "^18.16.1"
+    "node": "18.17.0||^18||^16"
   },
   "os": [
     "darwin"
   ],
   "dependencies": {
     "applescript": "^1.0.0",
-    "homebridge-lib": "~6.3.18",
+    "homebridge-lib": "~6.4.0",
     "is-my-json-valid": "^2.20.6"
   },
   "scripts": {
