--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "Homebridge plugin for iTunes with Airplay speakers",
   "displayName": "Homebridge Music",
   "version": "0.4.41",
+  "maintainers": [
+    "ebaauw"
+  ],
   "author": "Erik Baauw",
   "license": "Apache-2.0",
   "keywords": [
@@ -10,8 +13,8 @@
   ],
   "main": "index.js",
   "engines": {
-    "homebridge": "^1.7.0",
-    "node": "20.10.0||^20||^18"
+    "homebridge": "^1.8.3",
+    "node": "20.15.0||^20||^18"
   },
   "os": [
     "darwin"
